<resources>
    <string name="app_name">Quiz App</string>
    <string name="q1">Question 1: Who sang Bohemian Rhapsody?</string>
    <string name="q2">Question 2: Which one of these songs are by Radiohead?</string>
    <string name="q3">Question 3: Who belonged to Beatles?</string>
    <string name="q4">Question 4: Drake started from...</string>
    <string name="q5">Question 5: Who is the King of Pop?</string>
    <string name="q6">Question 6: Which singer did JayZ married?</string>
</resources>
